improve filter, add note
