# decoris/server/routes/client.js
@@ -3,10 +3,10 @@ const clientController = require("../controllers/clientController");
 
 const router = express.Router();
 
-router.post("/get-client/:name", clientController.getFilteredClientsListByName);
+router.get("/get-client/:id", clientController.getClientById);
 router.post("/get-clients", clientController.getFilteredClientsListByParametrs);
 router.post("/add-client", clientController.createClient);
 router.put("/update-client/:id", clientController.updateClient);
-router.delete("/delete-client/:name", clientController.deleteClientById);
+router.delete("/delete-client/:name", clientController.deleteClientByName);
 
 module.exports = router;
